# comments are for my benefit while learning setup.cfg

[metadata]
name = rsrtools
version = attr: rsrtools.__version__
description = Tools for creating Rocksmith 2014 songlists and managing Rocksmith save files
author = BuongiornoTexas
# author_email = fill in github noreply email if needed, blank otherwise?
url = https://github.com/BuongiornoTexas/rsrtools
# add CHANGELOG.rst in due course?
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_files = LICENSE
platform = Windows
keywords = Rocksmith, Songlists
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
	Programming Language :: Python :: 3.7    
	Topic :: Games/Entertainment

[options]
# Probably OK to set to True for pure .py dist
zip_safe = False 
# only needed with data files? License, readme, changelog?
include_package_data = False 
# need updated dict functionality, prefer 3.7
python_requires = >= 3.7 
packages = find:
setup_requires =
    setuptools
install_requires =
    pycryptodome >= 3.7.3
    simplejson >= 3.16
    toml >= 0.10.0
    pydantic >= 0.23
#package_dir =
#    =src # only if I don't start using flit in the future. Which may go to src
#   anyway :-(

[options.entry_points]
console_scripts =
    songlists = rsrtools.songlists.songlists:main
    profilemanager = rsrtools.files.profilemanager:main
#    welder = rsrtools.files.welder:main
